# StealthAgent2D

./: .gitignore  CMakeLists.txt  README.md  split_commits.py
src/: CameraObj.cpp  CameraObj.h  Entity.h  Guard.cpp  Guard.h  Item.h  Level.cpp  Level.h  LightingSystem.cpp  LightingSystem.h  MathUtils.cpp  MathUtils.h  Player.cpp  Player.h  main.cpp
